# v-mcp-2

./: .coverage  .gitignore  CONTRIBUTING.md  FINAL_SUMMARY.md  HOW_IT_WORKS.md  IMPLEMENTATION.md  Makefile  OUTPUT_FILES.md  PROJECT_SUMMARY.md  PR_SETUP_SUMMARY.md  QUICK_START.md  README.md  SCAN_RESULTS.md  SCAN_RESULTS_TOOLS.md  WORKFLOW_DIAGRAM.md  pyproject.toml  pytest.ini
docs/: ADDING_LANGUAGE_DETECTORS.md  SCANNING_MODES.md  TOOL_BASED_SCANNING.md
examples/: test_scan.py
results/: 82ch-MCP-Dandan-violations.json  BurtTheCoder-mcp-maigret-violations.json  BurtTheCoder-mcp-shodan-violations.json  BurtTheCoder-mcp-virustotal-violations.json  Gaffx-volatility-mcp-violations.json  HaroldFinchIFT-vuln-nist-mcp-server-violations.json  LaurieWired-GhidraMCP-violations.json  StacklokLabs-osv-mcp-violations.json  adeptus-innovatio-solvitor-mcp-violations.json  atomicchonk-roadrecon_mcp_server-violations.json  firstorderai-authenticator_mcp-violations.json  fosdickio-binary_ninja_mcp-violations.json  fr0gger-MCP_Security-violations.json  gbrigandi-mcp-server-cortex-violations.json  gbrigandi-mcp-server-thehive-violations.json  gbrigandi-mcp-server-wazuh-violations.json  intruder-io-intruder-mcp-violations.json  jtang613-GhidrAssistMCP-violations.json  jyjune-mcp_vms-violations.json  kontext-dev-attestable-mcp-server-violations.json  makalin-SecureMCP-violations.json  mariocandela-beelzebub-violations.json  mrexodia-ida-pro-mcp-violations.json  nickpending-mcp-recon-violations.json  panther-labs-mcp-panther-violations.json  pullkitsan-mobsf-mcp-server-violations.json  (+17 more)
(+35 files in other folders)
