[project]
name = "vmcp"
version = "0.1.0"
description = "Vulnerability Management CI/CD Platform - Automated security scanning for repositories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "yara-python>=4.5.0",
]

[project.scripts]
vmcp = "vmcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
